airflow/logs/scheduler/2026-01-13/XcomExmpleDag.py.log
[2026-01-13T02:50:47.686+0000] {processor.py:161} INFO - Started process (PID=4373) to work on /opt/airflow/dags/XcomExmpleDag.py
[2026-01-13T02:50:47.689+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/XcomExmpleDag.py for tasks to queue
[2026-01-13T02:50:47.691+0000] {logging_mixin.py:188} INFO - [2026-01-13T02:50:47.690+0000] {dagbag.py:545} INFO - Filling up the DagBag from /opt/airflow/dags/XcomExmpleDag.py
[2026-01-13T02:50:47.808+0000] {logging_mixin.py:188} INFO - [2026-01-13T02:50:47.807+0000] {dagbag.py:355} ERROR - Failed to import: /opt/airflow/dags/XcomExmpleDag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/dagbag.py", line 351, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/XcomExmpleDag.py", line 11
    context['it'].xcom_pull('file_size_count':100)
                                             ^
SyntaxError: invalid syntax
[2026-01-13T02:50:47.811+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/XcomExmpleDag.py
[2026-01-13T02:50:48.098+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/XcomExmpleDag.py took 0.437 seconds
[2026-01-13T02:51:20.172+0000] {processor.py:161} INFO - Started process (PID=4382) to work on /opt/airflow/dags/XcomExmpleDag.py
[2026-01-13T02:51:20.175+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/XcomExmpleDag.py for tasks to queue
[2026-01-13T02:51:20.186+0000] {logging_mixin.py:188} INFO - [2026-01-13T02:51:20.185+0000] {dagbag.py:545} INFO - Filling up the DagBag from /opt/airflow/dags/XcomExmpleDag.py
[2026-01-13T02:51:20.339+0000] {logging_mixin.py:188} INFO - [2026-01-13T02:51:20.337+0000] {dagbag.py:355} ERROR - Failed to import: /opt/airflow/dags/XcomExmpleDag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/dagbag.py", line 351, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/XcomExmpleDag.py", line 11
    context['it'].xcom_pull('file_size_count':100)
                                             ^
SyntaxError: invalid syntax
[2026-01-13T02:51:20.341+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/XcomExmpleDag.py
[2026-01-13T02:51:20.564+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/XcomExmpleDag.py took 0.420 seconds
